Add a title to the head picker view

--- a/strand/iOS/Strand/Strand/DFHeadPickerViewController.xib
+++ b/strand/iOS/Strand/Strand/DFHeadPickerViewController.xib
@@ -13,6 +13,7 @@
                 <outlet property="headScrollView" destination="TGi-bf-oic" id="4oQ-NS-JIw"/>
                 <outlet property="searchBar" destination="xDk-xr-w0N" id="2Az-No-ywl"/>
                 <outlet property="tableView" destination="cHf-k9-IF9" id="ZbQ-4W-KN1"/>
+                <outlet property="titleLabel" destination="uq0-9h-jiE" id="vo5-NA-8l6"/>
                 <outlet property="view" destination="zw1-qB-cts" id="dMT-eE-VpX"/>
             </connections>
         </placeholder>
@@ -22,7 +23,7 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="54" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="cHf-k9-IF9">
-                    <rect key="frame" x="0.0" y="148" width="600" height="452"/>
+                    <rect key="frame" x="0.0" y="149" width="600" height="451"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="cfV-y9-yhC"/>
@@ -48,20 +49,26 @@
                     </constraints>
                 </view>
                 <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="xDk-xr-w0N">
-                    <rect key="frame" x="0.0" y="104" width="600" height="44"/>
+                    <rect key="frame" x="0.0" y="105" width="600" height="44"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="9r1-19-RA2"/>
                     </constraints>
                     <textInputTraits key="textInputTraits"/>
                 </searchBar>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TGi-bf-oic">
-                    <rect key="frame" x="0.0" y="30" width="600" height="64"/>
+                    <rect key="frame" x="0.0" y="31" width="600" height="64"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="64" id="7Zi-b4-zi5"/>
                     </constraints>
                 </scrollView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uq0-9h-jiE">
+                    <rect key="frame" x="10" y="10" width="40" height="21"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
+                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
-            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="TGi-bf-oic" secondAttribute="trailing" id="3JM-HR-Nvd"/>
                 <constraint firstItem="xDk-xr-w0N" firstAttribute="leading" secondItem="zw1-qB-cts" secondAttribute="leading" id="4O5-tV-Y4P"/>
@@ -69,10 +76,12 @@
                 <constraint firstItem="cHf-k9-IF9" firstAttribute="top" secondItem="zw1-qB-cts" secondAttribute="top" priority="900" id="NMX-Sf-QTI"/>
                 <constraint firstAttribute="bottom" secondItem="wES-X9-VEJ" secondAttribute="bottom" id="Nzt-7M-HZh"/>
                 <constraint firstAttribute="bottom" secondItem="cHf-k9-IF9" secondAttribute="bottom" id="QOP-nC-qGz"/>
-                <constraint firstItem="TGi-bf-oic" firstAttribute="top" secondItem="zw1-qB-cts" secondAttribute="top" constant="30" id="Rhy-lb-3t3"/>
+                <constraint firstItem="TGi-bf-oic" firstAttribute="top" secondItem="zw1-qB-cts" secondAttribute="top" constant="31" id="Rhy-lb-3t3"/>
                 <constraint firstItem="TGi-bf-oic" firstAttribute="leading" secondItem="zw1-qB-cts" secondAttribute="leading" id="WJk-FO-azU"/>
                 <constraint firstItem="cHf-k9-IF9" firstAttribute="top" secondItem="xDk-xr-w0N" secondAttribute="bottom" id="WmQ-j4-XPi"/>
                 <constraint firstItem="wES-X9-VEJ" firstAttribute="leading" secondItem="zw1-qB-cts" secondAttribute="leading" id="X9T-3b-DBh"/>
+                <constraint firstItem="uq0-9h-jiE" firstAttribute="top" secondItem="zw1-qB-cts" secondAttribute="top" constant="10" id="ceb-wD-VBD"/>
+                <constraint firstItem="uq0-9h-jiE" firstAttribute="leading" secondItem="zw1-qB-cts" secondAttribute="leading" constant="10" id="fy3-8k-Aw2"/>
                 <constraint firstAttribute="trailing" secondItem="cHf-k9-IF9" secondAttribute="trailing" id="ibj-s5-nVq"/>
                 <constraint firstAttribute="trailing" secondItem="xDk-xr-w0N" secondAttribute="trailing" id="mGi-7o-5eO"/>
                 <constraint firstAttribute="trailing" secondItem="wES-X9-VEJ" secondAttribute="trailing" id="nkN-Nf-s0E"/>
