--- a/peanut/static/smskeeper/style/style.css
+++ b/peanut/static/smskeeper/style/style.css
@@ -8,39 +8,6 @@
   height: 100vh;
 }
 
-#appDiv 
-{
-  display: block;
-  height: auto;
-  position: absolute;
-  bottom: 0;
-  top:0;
-  left:0;
-  right:0;
-  margin-top:20px;
-  margin-bottom:20px;
-  margin-right:40px;
-  margin-left:40px;
-}
-
-#appContent
-{
-  width:100%;
-  height: 95%;
-  border-radius: 4pt;
-  overflow: hidden;
-  margin-top:40px;
-}
-
-/* header */
-
-#headerBar
-{
-  position: absolute;
-  width: 100%;
-  height: 40px;
-}
-
 .appTitle
 {
   font-family: Avenir-Light;
@@ -49,19 +16,31 @@
   position: absolute;
 }
 
-.signOut
+.message
 {
-  text-align: right;
-  position: absolute;
-  right: 0pt;
-  margin-top: 10px;
+	padding: 1pt 4px;
+	white-space: pre;
+	clear:both;
+	width: 40%;
+	margin: 8px 8px;
+	border-radius: 4px;
 }
 
-.signOut a
+.incoming
 {
-  font-family: Avenir-Light;
-  font-size: 14pt;
-  color:#DDD;
+	background-color: #7D7;
+	float: left;
+}
+
+.outgoing
+{
+	background-color: #DDD;
+	text-align: right;
+	float: right;
+}
+
+.clear {
+  clear: both;
 }
 
 /* login */
