--- a/peanut/static/smskeeper/style/style.css
+++ b/peanut/static/smskeeper/style/style.css
@@ -20,7 +20,6 @@
 {
 	padding: 1pt 4px;
 	clear:both;
-	width: 40%;
 	margin: 8px 8px;
 	border-radius: 4px;
 }
@@ -39,8 +38,7 @@
 .outgoing
 {
 	background-color: #DDD;
-	text-align: right;
-	float: right;
+	float: left;
 }
 
 .clear {
