--- a/peanut/smskeeper/templates/thread_view.html
+++ b/peanut/smskeeper/templates/thread_view.html
@@ -4,19 +4,21 @@
     <link rel="stylesheet" href="/static/smskeeper/style/style.css" />
     <!-- React JS -->
     <!-- <script src="https://fb.me/react-0.13.0.min.js"></script> -->
-		<script src="https://fb.me/react-0.13.0.js"></script>	
+		<script src="https://fb.me/react-0.13.0.js"></script>
     <script src="https://fb.me/JSXTransformer-0.13.0.js"></script>
     <!-- JQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <!-- Class Names -->
     <script src="/static/smskeeper/src/node_modules/classnames/index.js"></script>
-    
+    <
+
   </head>
   <body>
     <div id="keeper_app"></div>
 		<script type='text/javascript'>
 			USER_ID = {{ user_id }};
 		</script>
-    <script type='text/jsx' src="/static/smskeeper/src/keeper_app.js"></script>
+    <script type='text/jsx' src="/static/smskeeper/src/keeper_app.jsx"></script>
   </body>
 </html>
