--- a/peanut/static/smskeeper/style/style.css
+++ b/peanut/static/smskeeper/style/style.css
@@ -1,13 +1,5 @@
 /*main containers */
 
-
-#keeper_app
-{
-  background-color: #EEE;
-  width: 100vw;
-  height: 100vh;
-}
-
 .appTitle
 {
   font-family: Avenir-Light;
@@ -45,13 +37,25 @@
   clear: both;
 }
 
+#json_popup
+{
+  white-space: pre;
+  position: absolute;
+  width: 300px;
+  overflow: hidden;
+  background-color: #444;
+  color: white;
+  word-wrap: break-word;
+  padding: 5px 10px;
+}
+
 /* login */
 
 .loginArea
 {
   margin-left: auto;
   margin-right: auto;
-  margin-top: 60pt; 
+  margin-top: 60pt;
   width: 250pt;
   height: 250pt;
   background-color: #FFF;
@@ -108,7 +112,7 @@
 
 /* content */
 
-.photoList 
+.photoList
 {
   float: left;
   overflow-y: scroll;
@@ -128,7 +132,7 @@
 .detailImageView
 {
   width: auto;
-  height: 95%; 
+  height: 95%;
   display: block;
 }
 
