--- a/peanut/static/smskeeper/style/style.css
+++ b/peanut/static/smskeeper/style/style.css
@@ -10,15 +10,24 @@
 
 .message
 {
-	padding: 1pt 4px;
 	clear:both;
 	margin: 8px 8px;
-	border-radius: 4px;
+  overflow: hidden;
+  display: table;
 }
 
-.preformatted
+.body
 {
-	white-space: pre;
+  padding: 1pt 4px;
+  border-radius: 4px;
+  white-space: pre;
+}
+
+.messageDate
+{
+  font-size: 8pt;
+  color: darkgray;
+  display: table-row;
 }
 
 .incoming
