--- a/peanut/smskeeper/templates/dashboard.html
+++ b/peanut/smskeeper/templates/dashboard.html
@@ -9,8 +9,10 @@
     <!-- JQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <!-- Class Names -->
     <script src="/static/smskeeper/src/node_modules/classnames/index.js"></script>
+    <script src="/static/jquery.timeago.js"></script>
 
   </head>
   <body>
