--- a/peanut/static/smskeeper/style/style.css
+++ b/peanut/static/smskeeper/style/style.css
@@ -23,7 +23,7 @@
   white-space: pre;
 }
 
-.messageDate
+.messageHeader
 {
   font-size: 8pt;
   color: darkgray;
@@ -44,18 +44,6 @@
 
 .clear {
   clear: both;
-}
-
-#json_popup
-{
-  white-space: pre;
-  position: absolute;
-  width: 300px;
-  overflow: hidden;
-  background-color: #444;
-  color: white;
-  word-wrap: break-word;
-  padding: 5px 10px;
 }
 
 /* login */
