Disable autoscroll but let user scroll past end

--- a/website/smskeeper/scss/_sections.scss
+++ b/website/smskeeper/scss/_sections.scss
@@ -120,6 +120,7 @@ header {
 #hp_convo {
 	margin-top:								185px;
 //	margin-top:										60px;
+	padding-bottom: 						80vh;
 
 	@media (max-width: 850px){
 		margin-top:							40px;
