--- a/website/smskeeper/style.css
+++ b/website/smskeeper/style.css
@@ -514,7 +514,8 @@ header {
 
 #hp_convo {
   margin-top: 185px;
-  padding-bottom: 80vh; }
+  padding-bottom: 80vh;
+  visibility: none; }
   @media (max-width: 850px) {
     #hp_convo {
       margin-top: 40px; } }
