Fix history page formatting on mobile

--- a/peanut/smskeeper/templates/thread_view.html
+++ b/peanut/smskeeper/templates/thread_view.html
@@ -11,7 +11,7 @@
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <!-- Class Names -->
     <script src="/static/smskeeper/src/node_modules/classnames/index.js"></script>
-
+    <meta name=viewport content="width=device-width, initial-scale=1">
   </head>
   <body>
     <div id="keeper_app"></div>
